k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: movie-microservices
  labels:
    name: movie-microservices
